--- a/styles/partials/_fonts.scss
+++ b/styles/partials/_fonts.scss
@@ -4,22 +4,30 @@
 
 @font-face {
     font-family: "Avenir";
-    src: url("../../assets/fonts/AvenirNextLTPro-Bold.otf") format("truetype");
-    font-weight: bold;
+    src: url("../../assets/fonts/AvenirNextLTPro-Bold.otf") format("opentype");
+    font-weight: 700;
     font-style: normal;
 }
 
 @font-face {
     font-family: "Avenir";
-    src: url("../../assets/fonts/AvenirNextLTPro-Demi.otf") format("truetype");
+    src: url("../../assets/fonts/AvenirNextLTPro-Demi.otf") format("opentype");
     font-weight: 600;
     font-style: normal;
 }
 
 
 @font-face {
-    font-family: "Nunito";
-    src: url("../../assets/fonts/AvenirNextLTPro-Regular.otf") format("truetype");
+    font-family: "Avenir";
+    src: url("../../assets/fonts/AvenirNextLTPro-Regular.otf") format("opentype");
     font-weight: 400;
     font-style: normal;
 }
+
+@font-face {
+    font-family: "Avenir";
+    src: url("../../assets/fonts/AvenirNextLTPro-Regular.otf") format("opentype");
+    font-weight: 400;
+    font-style: normal;
+}
+
