--- a/styles/partials/_header.scss
+++ b/styles/partials/_header.scss
@@ -1,3 +1,194 @@
 @use "./colors" as color;
 @use "./mixins" as element;
 @use "./braikpoints" as brkpoin;
+@use './fonts';
+
+.header {
+    background: color.$black;
+    color: color.$white;
+    font-weight: 700;
+    height: 8vh;
+
+
+
+    &__logo-name {
+        padding: 35px;
+        width: 100vw;
+        display: block;
+        text-align: center;
+        font-weight: 600;
+        font-size: 1.5rem;
+    }
+
+
+
+    &__menu {
+        list-style-type: none;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        text-align: center;
+        font-weight: 600;
+        font-size: .875rem;
+        line-height: 1.375rem;
+        margin: 0;
+        padding: 0;
+    }
+
+    &__menu-item {
+        margin: 0;
+        font-weight: 600;
+        font-size: .875rem;
+        line-height: 1.375rem;
+    }
+
+
+
+    &__menu-item-link {
+
+        text-decoration: none;
+        color: color.$white;
+
+
+
+    }
+}
+
+
+
+.header__menu-item.left {
+
+    border-bottom: 0.25rem solid white;
+    flex: 0.5;
+    padding-bottom: .625rem;
+    text-decoration: none;
+}
+
+.header__menu-item.right {
+    flex: 0.5;
+    text-decoration: none;
+    color: color.$mercury;
+    font-weight: 400;
+}
+
+
+@include brkpoin.medium {
+
+    .header {
+        flex-direction: row;
+        width: 100vw;
+        height: 8vh;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+
+
+        &__logo-name {
+            padding: 35px;
+            width: 30vw;
+            display: inline-block;
+            text-align: left;
+            font-weight: 600;
+            font-size: 1.5rem;
+        }
+
+        &__menu {
+        display: row;
+            text-align: left;
+            justify-content: space-between;
+            gap: 1.25rem;
+            width: 30vw;
+            padding-top: 3rem;
+        }
+
+        &__menu-item .left {
+        
+                    border-bottom: 0.25rem solid white;
+                    flex: 0.2;
+                    text-decoration: none;
+                }
+        
+                .header__menu-item.right {
+                    flex: 0.5;
+                    text-decoration: none;
+                    color: color.$mercury;
+                    font-weight: 400;
+                }
+    }
+        .left {
+    
+            border-bottom: 0.25rem solid white;
+          
+            padding-bottom: 0;
+            text-decoration: none;
+        }
+}
+
+
+
+
+
+    /******* Hero*************/
+    .hero {
+        width: 100vw;
+        height: 50vh;
+        position: relative;
+        background: url(../../assets/images/hero-bio.jpg);
+        background-size: cover;
+    }
+
+    .cover {
+        width: 100vw;
+        height: 50vh;
+        position: absolute;
+        top: 0;
+        left: 0;
+        background: rgb(50, 50, 50, 0.5);
+        color: white;
+        display: flex;
+        align-items: flex-start;
+        justify-content: center;
+        flex-direction: column;
+        background-position: 50% 50%;
+        flex-wrap: nowrap;
+    }
+
+
+
+
+    .cover__title {
+        top: 33%;
+        right: 0;
+        padding-left: 1rem;
+        color: color.$white;
+        padding-left: 1rem;
+        font-weight: 700;
+        font-size: 1.5rem;
+        line-height: 2rem;
+    }
+
+
+    .main__first--title {
+        padding-left: 1rem;
+        font-weight: 700;
+        font-size: 1.5rem;
+        line-height: 2rem;
+        text-align: left;
+    }
+
+    .main__first,
+    .main__second {
+        margin: 2rem;
+    }
+
+    .main__first--img {
+        max-width: 100%;
+        height: auto;
+        margin: 2rem;
+        display: inline-block;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        background-position: 50% 50%;
+        text-align: center;
+    }
