--- a/styles/partials/_header.scss
+++ b/styles/partials/_header.scss
@@ -79,8 +79,8 @@
         width: 100vw;
         height: 8vh;
         display: flex;
-        justify-content: space-between;
         align-items: center;
+
 
 
         &__logo-name {
@@ -88,17 +88,22 @@
             width: 30vw;
             display: inline-block;
             text-align: left;
-            font-weight: 600;
-            font-size: 1.5rem;
+            font-weight: 700;
+            font-size: 2.25rem;
+            line-height: 2.75rem;
         }
 
         &__menu {
-        display: row;
-            text-align: left;
+            flex-direction: row;
             justify-content: space-between;
-            gap: 1.25rem;
             width: 30vw;
             padding-top: 3rem;
+            text-align: left;
+                font-weight: 600;
+                font-size: 1.5rem;
+                line-height: 2rem;
+            
+            
         }
 
         &__menu-item .left {
