--- a/styles/partials/_mixins.scss
+++ b/styles/partials/_mixins.scss
@@ -97,3 +97,17 @@
     font-size: .625rem;
     line-height: 1.25rem;
 }
+
+
+
+
+@mixin hidden {
+    position: absolute;
+    overflow: hidden;
+    clip: rect(0 0 0 0);
+    height: 1px;
+    width: 1px;
+    margin: -1px;
+    padding: 0;
+    border: 0;
+}
