--- a/styles/partials/_breakpoints.scss
+++ b/styles/partials/_breakpoints.scss
@@ -1,6 +1,9 @@
 $mobile-max-width: 767px;
 $tablet-min-width: 768px;
+$tablet-landscape-min-width: 1024px;
 $desktop-min-width: 1280px;
+
+
 
 /* media query for mobile */
 @mixin small {
