--- a/styles/partials/_footer.scss
+++ b/styles/partials/_footer.scss
@@ -1,6 +1,6 @@
 @use "./colors" as *;
 @use "./mixins" as element;
-@use "./braikpoints" as breakpoints;
+@use "./breakpoints" as breakpoints;
 
 
 
