--- a/styles/partials/_header.scss
+++ b/styles/partials/_header.scss
@@ -22,6 +22,8 @@
         margin: 1rem 0 0 0;
         padding: 0 35px 0 35px;
         text-align: center;
+        width: 120px;
+        height: 20px;
         font-weight: 600;
         font-size: 1.5rem;
         line-height: 2rem;
