--- a/styles/partials/_footer.scss
+++ b/styles/partials/_footer.scss
@@ -1,6 +1,8 @@
 @use "./colors" as *;
 @use "./mixins" as element;
 @use "./breakpoints" as breakpoints;
+@use "./fonts";
+
 
 
 
@@ -14,8 +16,7 @@
         padding: 20px;
         display: flex;
         padding: 2rem;
-        font-weight: 400;
-        font-weight: 400;
+    font-weight: 400;
         font-size: .875rem;
         line-height: 1.25rem;
 
@@ -27,6 +28,25 @@
 padding-top: 10px;
         }
 }
+
+
+
+@include breakpoints.medium {
+    .footer {
+        border: 1px solid $black;
+        font-weight: 900;
+        display: flex;
+        flex-direction: row;
+        padding: 20px;
+        display: flex;
+        padding: 2rem;
+        font-weight: 400;
+            font-size: .875rem;
+            line-height: 1.25rem;
+    }
+}
+
+
 
 .social__icon--item {
     margin: .3125rem;
