--- a/styles/partials/_main-content.scss
+++ b/styles/partials/_main-content.scss
@@ -7,31 +7,32 @@
 
 
 
-.hero {
+.main__hero {
     width: 100%;
-    position: relative;
-    height: 50%;
     margin: 0 auto;
+    position: relative;
     background: url(../../assets/images/hero-bio.jpg);
     background-size: cover;
+    height: 50vh;
+   
 }
 
-.cover {     /*check later*/ 
+.main__hero--cover {     /*check later*/ 
     width: 100%;
-    position: absolute;
     margin: 0 auto;
     top: 0;
     left: 0;
     background: rgb(50, 50, 50, 0.5);
-    display: flex;
     align-items: flex-start;
     justify-content: center;
     flex-direction: column;
-    background-position: 50% 50%;
     flex-wrap: nowrap;
+    height: 50vh;
+    position: absolute;
+    padding: 0 20px 0 20px;
 }
 
-.cover__title {
+.main__hero--title {
     top: 33%;
     right: 0;
     padding-left: 1rem;
@@ -44,15 +45,21 @@
 
 
 .main {
-    margin: 0 1.5rem 0 1.5rem;
-    display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    display: flex;
 
    
 }
 
+.main__container--content {
+
+font-weight: 600;
+    font-size: .875rem;
+    line-height: 1.375rem;
+    text-align: left;
+}
 
 .main__first--title {
     font-weight: 700;
@@ -61,12 +68,42 @@
     text-align: left;
 }
 
-.main__first,
-.main__second {
-    margin: 2rem;
-    padding: 0;
+@include breakpoints.medium {
+.main__first--title {
+    font-weight: 700;
+        font-size: 2.25rem;
+        line-height: 2.75rem;
+    }
 }
 
+.main__second--header{
+font-weight: 700;
+    font-size: 1.5rem;
+    line-height: 2rem;
+}
+@include breakpoints.medium {
+    .main__second--header {
+        font-weight: 700;
+        font-size: 2.25rem;
+        line-height: 2.75rem;
+    }
+}
+
+.main__first,
+.main__second {
+    font-weight: 400;
+    font-size: .8125rem;
+    line-height: 1.125rem;
+        margin: 0 1.5rem 0 1.5rem;
+}
+@include breakpoints.medium {
+    .main__second--content {
+        column-count: 2;
+        font-weight: 400;
+            font-size: 1.5rem;
+            line-height: 2rem;
+    }
+}
 
 
 .main__first--img {
@@ -75,22 +112,22 @@
 
 }
 
-@include breakpoints.medium {
-    .main__second--content{
-    column-count: 2;
-    }
-}
 
-.main-gallery {
+
+.main__gallery {
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
     margin: 0 auto;
+
+
+
     @include breakpoints.medium {
             font-size: 1.8rem;
-            display: flex;
-            flex-direction: row;
             margin-left: 30px;
+           
+
         }
                 @include breakpoints.xlarge {
                     font-size: 1.8rem;
@@ -102,16 +139,24 @@
 
 .main-gallery__image {
     max-width: 100%;
-    width: 30rem;
+    width: 40rem;
     margin: 0 auto;
     padding: 10px;
-    flex-direction: column;
     text-align: center;
-    @include breakpoints.medium {
-            font-size: 1.8rem;
-            width: 10rem;
+}
+         
+
+@include breakpoints.medium {
+    .main__gallery {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: row;
+            margin: 0 auto;
         }
-        
-        
-    }
-                
+    .row {
+    width: 30%;
+
+        }
+               
+}
